--- a/slides/references.bib
+++ b/slides/references.bib
@@ -22,3 +22,11 @@
   year={2021},
   publisher={Manning}
 }
+@book{publishingPython2022hillard,
+  title={Publishing Python Packages. Test, share, and automate your projects},
+  author={Hilliard, Dane.},
+  isbn={9781617299919},
+  url={https://www.manning.com/books/publishing-python-packages},
+  year={2022},
+  publisher={Manning}
+}
